--- a/css/styles.css
+++ b/css/styles.css
@@ -46,40 +46,31 @@ body {
   color: var(--secondary-text-color);
   background-color: var(--background-wrapper);
 }
-/* .section { 
-  padding-top: 120px;
-  padding-bottom: 120px;
- } */
-
-/* .container {
-  width: 1158px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-} */
-
-
 
 
 .container {
-  padding-left: 15px;
-  padding-right: 15px;
- 
+  max-width: 428px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@media screen  and (min-width: 428px) {
+/* @media screen  and (min-width: 428px) { 
   .container {
     width: 396px;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
 
   }
-}
+}*/
 
 @media screen  and (min-width: 768px) {
   .container {
-    width: 736px;
+    max-width: 768px;
+   
   
   }
 
@@ -87,12 +78,15 @@ body {
 
 @media screen  and (min-width: 1158px) {
   .container {
-    width: 1158px;
-  
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
-
+  .section { 
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
-
+}
 
 
 
@@ -117,13 +111,19 @@ body {
   .page-adress {
     display: none;
   }
+
+  
+
   .mobile-menu-open {
     background-color: transparent;
     border: none;
     padding: 0;
     line-height: 0;
   }
-  
+  .page-header { 
+    padding-top: 24px;
+    padding-bottom: 21px;
+  } 
   
   .mobile-menu {
     position: fixed;
@@ -145,6 +145,7 @@ body {
   }
   
   .mobile-menu-container {
+    width: 100%;
     height: 100%;
     position: relative;
     padding-top: 80px;
@@ -152,7 +153,14 @@ body {
     padding-bottom: 40px;
   }
   
+  /* .mob-menu-adress-container { 
+    display: flex;
+    flex-direction:column ;
+    gap: 284px;
+  }*/
   
+  
+
   .mobile-menu-close-btn {
     position: absolute;
     top: 24px;
@@ -174,19 +182,26 @@ body {
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
-    line-height: 1,11;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--menu-color);
     transition: color var(--transition-duration-and-func);
   }
   
+  .current-mobile {
+    color: #404bbf; 
+  }
+
   .mobile-menu-list-item:not(:last-child) {
     margin-bottom: 40px;
   }
-  .mobile-menu-list {
-    margin-bottom: 284px;
-  }
+  
+.mobile-adress-list {
+  display: block;
+  margin-top: 284px;
+}
+ 
   
   .mobile-menu-link:hover,
   .mobile-menu-link:focus {
@@ -194,21 +209,24 @@ body {
   }
   
   .mobile-menu-adress {
+
       display: flex;
       flex-direction: column;
       column-gap: 40px;
+      
       margin-bottom: 48px;
   }
-  .mobile-adress-list-item {
-    margin-bottom: 40px;
+  .tel-item {
+    margin-bottom: 40px; 
   }
   
   .mob-menu-tel {
+    
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
-    line-height: 1,11;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #4D5AE5;
@@ -218,15 +236,16 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
-  line-height: 1,2;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   color: #434455;
   }
   
   .mob-menu-social-list {
+   
     display: flex;
-    justify-content: center;
     gap: 56px;
+
   }
   
   .mob-menu-social-list-link {
@@ -254,10 +273,7 @@ body {
   }
 }
 
-.page-header {
-  padding-top: 24px;
-  padding-bottom: 21px;
-}
+ 
 .page-header-container {
   display: flex;
   align-items: center;
@@ -327,8 +343,8 @@ body {
   gap: 12px;
 }
 .contact-list {
-  font-size: 12px;
-line-height: 1,16;
+font-size: 12px;
+line-height: 1.16;
 letter-spacing: 0.04em;
 color: #434455;
 }
@@ -351,6 +367,8 @@ border-radius: 2px;
 }
 
 @media screen and (min-width: 1158px) {
+
+
   .page-header { 
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -372,6 +390,15 @@ border-radius: 2px;
     flex-direction: row;
     gap: 40px;
   }
+
+  .contact-list {
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+
+  }
 }
 
   /* =======HEADER */
@@ -381,7 +408,14 @@ border-radius: 2px;
           
 /* ===============HERO===================== */
 
-/* @media screen and (max-width: 767px) { */
+ @media screen and (max-width: 767px) {
+ 
+}
+
+.hero {
+  padding-top: 112px;
+  padding-bottom: 112px;
+  }
 
 .background {
   margin: 0 auto;
@@ -396,11 +430,10 @@ border-radius: 2px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 72px;
-  padding-top: 112px;
   max-width: 320px;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1,11;
+  line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   color:  var(--background-wrapper);
@@ -416,7 +449,7 @@ border-radius: 2px;
   margin-right: auto;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1,5;
+  line-height: 1.5;
   transition: background-color var(--transition-duration-and-func);
   align-items: center;
   letter-spacing: 0.04em;
@@ -447,7 +480,7 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .background {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/adapt/background-tab.jpg);
      min-width: 768px;
-     height: 436px;
+     
 }
 
 
@@ -455,8 +488,9 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
   margin-bottom: 36px;
   max-width: 496px;
   font-size: 56px;
-  line-height: 1,07;
+  line-height: 1.07;
 }
+
 
 }
 
@@ -475,14 +509,19 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .background {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/adapt/background-desk.jpg);
     max-width: 1440px;
-    height: 600px;
+    
   }
     .main-title {
       margin-bottom: 48px;
       max-width: 496px;
     }
+    .hero {
+      padding-top: 188px;
+      padding-bottom: 188px;
+      }
+    }
     
-}
+
 
   
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 1158px),
@@ -497,8 +536,6 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
 /* =========================VALUES============= */
 @media screen and (max-width: 767px) {
   .values-menu {
-    margin-top: 96px;
-    margin-bottom: 96px;
     display: flex;
     flex-direction: column;
     gap: 72px;
@@ -508,7 +545,10 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   }
 }
 
-
+.values {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
 
 .values-icon-container {
   display: none;
@@ -518,7 +558,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   margin-bottom: 8px;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1,11;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2E2F42;
@@ -528,14 +568,14 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   .values-menu-item {
     font-weight: 500;
     font-size: 16px;
-    line-height: 1,5;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
   }
   .description {
     font-weight: 500;
     font-size: 16px;
-    line-height: 1,5;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
   }
@@ -546,31 +586,20 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   
 
   .values-menu {
-    margin-top: 96px;
-    margin-bottom: 96px;
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 72px;
   }
 
   .values-menu-item {
-    width: calc((100% - 24px) / 2); 
+    width: calc((100% - 72px) / 2); 
   }
  
 }
 
 
 @media screen and (min-width: 1158px) {
-  .title {
-    margin-bottom: 72px;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.1;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: var(--menu-color);
-  }
+ 
 
   .values-icon-container {
     display: flex;
@@ -592,7 +621,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   .description {
     font-weight: 400;
     font-size: 16px;
-    line-height: 1,5;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--secondary-text-color);
   }
@@ -639,17 +668,17 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
     justify-content: center;
     align-items: center;
     gap: 72px;
-    padding-bottom: 96px;
   }
 }
   
  .employees { 
+  padding-top: 96px;
+  padding-bottom: 96px;
   background-color: #f4f4fd;
- 
 }
 
 .title {
-  padding-top: 96px;
+ 
   margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
@@ -684,7 +713,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   margin-bottom: 8px;
   font-weight: 400;
     font-size: 16px;
-    line-height: 1,5;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
@@ -729,15 +758,14 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   .employees-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
-    padding-bottom: 96px;
+    gap: 72px;
       justify-content: center;
       align-items: center;
      
     }
     .employees-list-item {
       max-width: 264px;
-      width: calc((100% - 24px) / 2);
+      width: calc((100% - 72px) / 2);
     }
   }
   
@@ -754,24 +782,33 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
     text-align: center;
     background: var(--background-wrapper);
 }
+.section { 
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
 }
 
 
 /* Customers */
 
+.customers {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
 .customers-list { 
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
-  margin-bottom: 96px;
+  gap: 72px;
+  
 }
 .customers-list-item {
-  width: calc((100% - 16px) / 2);
+  width: calc((100% - 72px) / 2);
   height: 88px;
 
 }
 .customers-list-link {
-  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -798,10 +835,10 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   .customers-list { 
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 72px;
   }
   .customers-list-item {
-    width: calc((100% - 48px) / 3);
+    width: calc((100% - 144px) / 3);
   }
 }
 
@@ -812,10 +849,14 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
     display: flex;
     justify-content:space-between;
     gap: 24px;
-    margin-bottom: 120px;
+
   }
   .customers-list-item {
     width: calc((100% - 120px) / 6);
+  }
+  .section { 
+    padding-top: 120px;
+    padding-bottom: 120px;
   }
 }
 
@@ -848,6 +889,15 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   
 }
 
+@media screen and (max-width: 320px) {
+  .footer-form-input {
+    max-width: 300px;
+  }
+}
+
+
+
+
 .footer { 
 background-color: var(--background-color);
 padding-top: 96px;
@@ -869,6 +919,7 @@ padding-bottom: 96px;
 }
 
 .footer-text {
+  text-align: start;
   font-style: normal;
   font-size: 16px;
   line-height: 1.5;
@@ -917,7 +968,7 @@ padding-bottom: 96px;
   margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #FFFFFF;
  }
@@ -955,7 +1006,7 @@ color: #FFFFFF;
  border-radius: 4px;
 font-weight: 500;
 font-size: 16px;
-line-height: 24px;
+line-height: 1.5;
 letter-spacing: 0.04em;
 color: #FFFFFF;
 transition: background-color var(--transition-duration-and-func);
@@ -978,8 +1029,8 @@ transition: background-color var(--transition-duration-and-func);
 
 .logo-social-cont {
   display: flex;
-  gap: 24px;
-  margin-bottom: 72px;
+  margin-right: 80px;
+ 
 }
 .footer-logo-container {
  min-width: 264px;
@@ -1010,13 +1061,8 @@ transition: background-color var(--transition-duration-and-func);
     display: inline-block; 
     margin-bottom: 16px;
   }
-  .social-media {
-    margin-right: 80px;
-    }
-   
-.footer-form-label {
-  margin-right: 24px; 
-}
+ 
+
 }
 /* .footer { 
 
@@ -1035,7 +1081,7 @@ transition: background-color var(--transition-duration-and-func);
  border-radius: 4px;
 font-weight: 500;
 font-size: 16px;
-line-height: 24px;
+line-height: 1.5;
 letter-spacing: 0.04em;
 color: #FFFFFF;
 transition: background-color var(--transition-duration-and-func);
@@ -1118,7 +1164,7 @@ background: #4D5AE5;
 font-style: normal;
 font-weight: 400;
 font-size: 16px;
-line-height: 24px;
+line-height: 1.5;
 letter-spacing: 0.02em;
 color: #F4F4FD;
 overflow: auto;
@@ -1158,6 +1204,24 @@ transition: transform var(--transition-duration-and-func);
 
 /* MODAL WINDOW */
 
+
+@media screen and (max-width: 767px) {
+  .modal {
+    max-width: 392px; 
+  
+  }
+  
+}
+  
+
+@media screen and (max-width: 320px) {
+  .modal {
+    max-width: 300px;
+   }
+  
+ 
+}
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -1167,6 +1231,7 @@ transition: transform var(--transition-duration-and-func);
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity var(--transition-duration-and-func), visibility var(--transition-duration-and-func); 
 }
+
 
 .modal {
   position: absolute;
@@ -1228,17 +1293,21 @@ transition: background-color var(--transition-duration-and-func),
 /* MODAL FORM */
 
 /* + */
+
+
+
 .modal-form-title {
   text-align: center; 
   margin-bottom: 16px;
 font-weight: 500;
 font-size: 16px;
-line-height: 24px;
+line-height: 1.5;
 letter-spacing: 0.02em;
 color: var( --background-color);
 }
 
 .modal-form {
+  max-width: 392px; 
 display: flex;
 flex-direction: column;
 
@@ -1388,7 +1457,7 @@ margin-right: 8px;
   color: #FFFFFF;
   font-weight: 500;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   
   padding: 16px 32px;
