--- a/css/styles.css
+++ b/css/styles.css
@@ -240,14 +240,22 @@ body {
   letter-spacing: 0.02em;
   color: #434455;
   }
-  
+    
+ 
+    
   .mob-menu-social-list {
-   
+    
     display: flex;
     gap: 56px;
 
   }
+
+  .mob-menu-social-list-item {
+    width: calc((100% - 224px) / 4);
+  }
   
+  
+
   .mob-menu-social-list-link {
     display: flex;
     justify-content: center;
@@ -299,7 +307,11 @@ body {
 }
 
 
-
+@media screen and (max-width: 427px) {
+  .mobile-menu {
+   width: 100%;
+  }
+}
 
 @media screen and (min-width: 768px) {
   .mobile-menu-open {
@@ -889,11 +901,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   
 }
 
-@media screen and (max-width: 320px) {
-  .footer-form-input {
-    max-width: 300px;
-  }
-}
+
 
 
 
@@ -1022,6 +1030,13 @@ transition: background-color var(--transition-duration-and-func);
 .footer-form-btn-icon {
   margin-left: 16px;
   fill: #FFFFFF;
+}
+
+
+@media screen and (max-width: 427px) {
+  .footer-form-input {
+    max-width: 310px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1208,15 +1223,14 @@ transition: transform var(--transition-duration-and-func);
 @media screen and (max-width: 767px) {
   .modal {
     max-width: 392px; 
-  
   }
   
 }
   
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 427px) {
   .modal {
-    max-width: 300px;
+    max-width: 310px;
    }
   
  
