--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,9 @@ body {
   }
   
   .mobile-menu-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 100%;
     height: 100%;
     position: relative;
@@ -197,10 +200,7 @@ body {
     margin-bottom: 40px;
   }
   
-.mobile-adress-list {
-  display: block;
-  margin-top: 284px;
-}
+
  
   
   .mobile-menu-link:hover,
@@ -355,6 +355,8 @@ body {
   gap: 12px;
 }
 .contact-list {
+font-style: normal;
+font-weight: 400;
 font-size: 12px;
 line-height: 1.16;
 letter-spacing: 0.04em;
@@ -404,8 +406,7 @@ border-radius: 2px;
   }
 
   .contact-list {
-font-style: normal;
-font-weight: 400;
+
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
@@ -600,11 +601,11 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   .values-menu {
     display: flex;
     flex-wrap: wrap;
-    gap: 72px;
+    gap: 72px 24px;
   }
 
   .values-menu-item {
-    width: calc((100% - 72px) / 2); 
+    width: calc((100% - 24px) / 2); 
   }
  
 }
@@ -767,23 +768,33 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
 
 
 @media screen and (min-width: 768px) {
+
+.employees-cont {
+  max-width: 584px;
+}
+
   .employees-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 72px;
+    gap: 64px 24px;
       justify-content: center;
       align-items: center;
      
     }
     .employees-list-item {
       max-width: 264px;
-      width: calc((100% - 72px) / 2);
+      width: calc((100% - 24px) / 2);
     }
   }
   
 
 
 @media screen and (min-width: 1158px) {
+
+  .employees-cont {
+    max-width: 1158px;
+  }
+
   .employees-list { 
     display: flex;
     flex-wrap: wrap;
@@ -811,11 +822,11 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
 .customers-list { 
   display: flex;
   flex-wrap: wrap;
-  gap: 72px;
+  gap: 72px 16px;
   
 }
 .customers-list-item {
-  width: calc((100% - 72px) / 2);
+  width: calc((100% - 16px) / 2);
   height: 88px;
 
 }
@@ -844,19 +855,29 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
 
 
 @media screen and (min-width: 768px) {
+
+  .customers-cont {
+    max-width: 584px;
+  }
+
   .customers-list { 
     display: flex;
     flex-wrap: wrap;
-    gap: 72px;
+    gap: 72px 24px;
   }
   .customers-list-item {
-    width: calc((100% - 144px) / 3);
+    width: calc((100% - 48px) / 3);
   }
 }
 
 
 
 @media screen and (min-width: 1158px) {
+
+  .customers-cont {
+    max-width: 1158px;
+  }
+
   .customers-list { 
     display: flex;
     justify-content:space-between;
@@ -1040,11 +1061,14 @@ transition: background-color var(--transition-duration-and-func);
 }
 
 @media screen and (min-width: 768px) {
-
-
+  .footer-section {
+    max-width: 584px;
+  }
+ 
 .logo-social-cont {
   display: flex;
   margin-right: 80px;
+  margin-bottom: 72px; 
  
 }
 .footer-logo-container {
@@ -1064,9 +1088,16 @@ transition: background-color var(--transition-duration-and-func);
 
 @media screen and (min-width: 1158px) {
   .footer-section {
+    max-width: 1158px;
     display: flex;
     align-items: baseline;
   
+  }
+
+  .logo-social-cont {
+    
+    margin-bottom: 0; 
+   
   }
 
   .footer-logo-container {
